--- a/about_bts.html
+++ b/about_bts.html
@@ -7,7 +7,7 @@
     <body>
         <div class="header"> BTS </div>
         <div class="row footer" id="rowfooter">
-            <p><a href="bts_homepage.html">Home</a></p>
+            <p><a href="index.html">Home</a></p>
             <p><a href= "about_bts.html">About</a></p>
             <p><a href="bts_gallery.html">Gallery</a></p>
             
