--- a/bts_gallery.html
+++ b/bts_gallery.html
@@ -8,7 +8,7 @@
         <div class="header"> BTS </div>
         
         <div class="row footer" id="rowfooter">
-            <p><a href="bts_homepage.html">Home</a></p>
+            <p><a href="index.html">Home</a></p>
             <p><a href= "about_bts.html">About</a></p>
             <p><a href="bts_gallery.html">Gallery</a></p>
             </div>
